# dotbak

./: .gitignore  .kateconfig  .vimspector.json  CMakeLists.txt  Dockerfile  README.md
include/: CMakeLists.txt  appversion.h.in
src/: CMakeLists.txt  Dotfile.cpp  Dotfile.h  main.cpp
test/: CMakeLists.txt  main.cpp
